# Native

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wallace/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/wallace/: MainActivity.java  Settings.java
app/src/main/java/com/wallace/services/: MediaPlayerService.java
app/src/main/java/com/wallace/ui/: VideoActivity.java
app/src/main/java/com/wallace/widget/media/: AndroidMediaController.java  FileMediaDataSource.java  IMediaController.java  IRenderView.java  IjkVideoView.java  InfoHudViewHolder.java  MeasureHelper.java  MediaPlayerCompat.java  SurfaceRenderView.java  TableLayoutBinder.java  TextureRenderView.java
app/src/main/java/com/wallace/widget/preference/: IjkListPreference.java
app/src/main/res/layout/: activity_main.xml  activity_video.xml
app/src/main/res/values/: strings.xml  strings_pref.xml
app/src/test/java/com/wallace/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tools/: CMakeLists.txt  build.gradle
tools/src/main/: AndroidManifest.xml
tools/src/main/jni/: yuv-decoder.c
tools/src/main/res/drawable/: example.xml  ic_swap_h_black_24dp.xml  progressbar_diy.xml
tools/src/main/res/layout/: activity_camera.xml  activity_example.xml  activity_flashlight.xml  activity_game.xml  activity_image.xml  activity_main.xml  activity_music.xml  activity_protractor.xml  activity_random.xml  activity_ruler.xml  activity_transition1.xml  (+18 more)
(+206 files in other folders)
